--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.0.1 2017-10-15
+  - Update xsbt-web-plugin
+    from 4.0.0 to 4.0.1
+
 1.0.0 2017-09-17
   - AutoPlugin compatible
   - sbt 1.x compatible
