--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.0.2 2018-03-08
+  - Update xsbt-web-plugin
+    from 4.0.1 to 4.0.2
+
 1.0.1 2017-10-15
   - Update xsbt-web-plugin
     from 4.0.0 to 4.0.1
